# qpid-cpp-store-debian

./: ChangeLog  Makefile.am  README  bootstrap  configure.ac
debian/: changelog  control  copyright  rules
debian/patches/: armel-endian.patch  db5.patch  disable-federation-test.patch  fix-test-compilation.patch  fix-tests.patch  gcc-47-compile-fixes.patch  libexec.patch  no-etc.patch  no-ltlibrary.patch  qpid-725859.patch  series  test-db-location.patch
debian/source/: lintian-overrides
docs/: Makefile.am  jrnl_tmpl.dox
etc/: rhmd.conf
lib/: BindingDbt.cpp  BindingDbt.h  BufferValue.cpp  BufferValue.h  Cursor.h  DataTokenImpl.cpp  DataTokenImpl.h  IdDbt.cpp  IdDbt.h  IdSequence.cpp  IdSequence.h  JournalImpl.cpp  JournalImpl.h  Makefile.am  MessageStoreImpl.cpp  MessageStoreImpl.h  PreparedTransaction.cpp  PreparedTransaction.h  StoreException.h  StorePlugin.cpp  TxnCtxt.cpp  TxnCtxt.h  qmf-schema.xml
lib/jrnl/: aio.cpp  aio.hpp  aio_callback.hpp  cvar.cpp  cvar.hpp  data_tok.cpp  data_tok.hpp  deq_hdr.hpp  deq_rec.cpp  deq_rec.hpp  enq_hdr.hpp  enq_map.cpp  enq_map.hpp  enq_rec.cpp  enq_rec.hpp  enums.hpp  fcntl.cpp  fcntl.hpp  file_hdr.hpp  jcfg.hpp  jcntl.cpp  jcntl.hpp  jdir.cpp  jdir.hpp  jerrno.cpp  jerrno.hpp  jexception.cpp  jexception.hpp  jinf.cpp  jinf.hpp  jrec.cpp  jrec.hpp  lp_map.cpp  lp_map.hpp  lpmgr.cpp  lpmgr.hpp  pmgr.cpp  pmgr.hpp  rcvdat.hpp  rec_hdr.hpp  (+22 more)
lib/jrnl2/: AioCallback.hpp  Configuration.hpp  DataToken.cpp  DataToken.hpp  DataTokenState.cpp  DataTokenState.hpp  Journal.cpp  Journal.hpp  JournalDirectory.cpp  JournalDirectory.hpp  JournalErrors.cpp  JournalErrors.hpp  JournalException.cpp  JournalException.hpp  JournalParameters.cpp  JournalParameters.hpp  JournalState.cpp  JournalState.hpp  Makefile.am  README  RecordHeader.hpp  ScopedLock.hpp
m4/: extensions.m4
perf/: JournalInstance.cpp  JournalInstance.hpp  JournalParameters.cpp  JournalParameters.hpp  JournalPerformanceTest.cpp  JournalPerformanceTest.hpp  Makefile.am  PerformanceResult.cpp  PerformanceResult.hpp  README  ScopedTimable.hpp  ScopedTimer.cpp  ScopedTimer.hpp  Streamable.cpp  Streamable.hpp  TestParameters.cpp  TestParameters.hpp  m
rhel4-support/: Makefile  README  rhel4.patch
tests/: .valgrind.supp  Makefile.am  MessageUtils.h  OrderingTest.cpp  SimpleTest.cpp  TransactionalTest.cpp  TwoPhaseCommitTest.cpp  clean.sh  persistence.py  run_long_python_tests  run_python_tests  run_short_python_tests  run_test  start_broker  stop_broker  system_test.sh  tests_env.sh  unit_test.cpp  unit_test.h  vg_check
tests/cluster/: Makefile.am  cluster_tests_env.sh  run_cpp_cluster_tests  run_long_python_cluster_tests  run_python_cluster_tests  system_test.sh
tests/federation/: Makefile.am  federation_tests_env.sh  run_federation_sys_tests  run_long_federation_sys_tests
tests/jrnl/: Makefile.am  _st_auto_expand.cpp  _st_basic.cpp  _st_basic_txn.cpp  _st_helper_fns.hpp  _st_read.cpp  _st_read_txn.cpp  _ut_enq_map.cpp  _ut_jdir.cpp  _ut_jerrno.cpp  _ut_jexception.cpp  _ut_jinf.cpp  _ut_lpmgr.cpp  _ut_rec_hdr.cpp  _ut_time_ns.cpp  _ut_txn_map.cpp  chk_jdata  cp_rtest_jrnl  jhexdump  prof  run-journal-tests
tests/jrnl/jtt/: Makefile.am  _ut_data_src.cpp  _ut_jrnl_init_params.cpp  _ut_jrnl_instance.cpp  _ut_read_arg.cpp  _ut_test_case.cpp  _ut_test_case_result.cpp  _ut_test_case_result_agregation.cpp  _ut_test_case_set.cpp  _ut_test_case_set.csv  args.cpp  args.hpp  data_src.cpp  data_src.hpp  jfile_chk.py  jrnl_init_params.cpp  jrnl_init_params.hpp  jrnl_instance.cpp  jrnl_instance.hpp  jtt.csv  main.cpp  read_arg.cpp  read_arg.hpp  test_case.cpp  test_case.hpp  test_case_result.cpp  test_case_result.hpp  test_case_result_agregation.cpp  test_case_result_agregation.hpp  test_case_set.cpp  test_case_set.hpp  test_mgr.cpp  test_mgr.hpp
tests/python_tests/: __init__.py  client_persistence.py  flow_to_disk.py  resize.py  store_test.py
tools/: Makefile.am  resize  store_chk
tools/qpidstore/: __init__.py  janal.py  jerr.py  jrnl.py
